# HerzMapper

./: Cargo.toml  README.md
assets/: map_data.json  wbcolors.aco
assets/palettes/: all.txt  no-special.txt
assets/worldlaws/: default.txt  gaia.txt
src/: main.rs
