[package]
name = "herzmapper"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kiddo = "5.0.3"
flate2 = "1.1.1"
clap = { version = "4.5.35", features = ["derive"] }
anyhow = "1.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"